# LSTM_Predictable_Actions

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
Config/: log_config.py
infra/environments/local/: iam.tf  lambda_clean.tf  lambda_organizer.tf  lambda_yfinance.tf  providers.tf  s3.tf  variables.tf
infra/environments/local/lambda/: cap_archive_s3.py
infra/environments/local/lambda_clean/: cap_clean.py  requirements.txt
infra/environments/local/lambda_yfinance/: cap_yfinance.py  requirements.txt
localstack_data/cache/: license.json  machine.json  server.test.pem  server.test.pem.crt  server.test.pem.key
localstack_data/cache/certs/ca/: LocalStack_LOCAL_Root_CA.crt  LocalStack_LOCAL_Root_CA.key.pem
mlflow_data/: mlflow.db
notebooks/: analyse.ipynb  transforme.ipynb
